<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color5"
    tools:context=".Registro">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="360dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color4"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/nombre"
                android:singleLine="true"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/telefono"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="" />
            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/telefono"
                android:singleLine="true"
                android:inputType="phone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/correoElectronico"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="" />
            <EditText
                android:id="@+id/correoElectronico"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/textViewCorreo"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/Password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:ems="10"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/nombre"
                tools:ignore="Autofill" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color4"
        android:text="@string/bntRegistro"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.133" />

</androidx.constraintlayout.widget.ConstraintLayout>